// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > renders correctly with props 1`] = `
<div
  aria-orientation="horizontal"
  class="accordion horizontal"
>
  
  <section
    aria-expanded="false"
    class=""
  >
    <header>
      <button
        tabindex="0"
        type="button"
      >
        
        <img
          class="icon"
          src="home.svg"
        />
        
        <span>
          Subpane 1
        </span>
        
        <div
          class="toggle"
        />
        
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        icon="home.svg"
        title="Subpane 1"
      >
        <p>
          Subpane 1 content
        </p>
      </div>
    </div>
  </section>
  <section
    aria-expanded="true"
    class="active"
  >
    <header>
      <button
        tabindex="0"
        type="button"
      >
        
        <!--v-if-->
        
        <span>
          Subpane 2
        </span>
        
        <div
          class="toggle"
        />
        
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        title="Subpane 2"
      >
        <p>
          Subpane 2 content
        </p>
      </div>
    </div>
  </section>
  <section
    aria-expanded="false"
    class=""
  >
    <header>
      <button
        tabindex="0"
        type="button"
      >
        
        <!--v-if-->
        
        <span>
          Subpane 3
        </span>
        
        <div
          class="toggle"
        />
        
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        title="Subpane 3"
      >
        <p>
          Subpane 3 content
        </p>
      </div>
    </div>
  </section>
  
</div>
`;

exports[`Accordion > renders correctly with slot 1`] = `
<div
  aria-orientation="vertical"
  class="accordion vertical"
>
  
  <section
    aria-expanded="false"
    class=""
  >
    <header>
      <button
        tabindex="0"
        type="button"
      >
        
        <img
          class="icon"
          src="home.svg"
        />
        
        <span>
          Subpane 1
        </span>
        
        <div
          class="toggle"
        />
        
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        icon="home.svg"
        title="Subpane 1"
      >
        <p>
          Subpane 1 content
        </p>
      </div>
    </div>
  </section>
  <section
    aria-expanded="false"
    class=""
  >
    <header>
      <button
        tabindex="0"
        type="button"
      >
        
        <!--v-if-->
        
        <span>
          Subpane 2
        </span>
        
        <div
          class="toggle"
        />
        
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        title="Subpane 2"
      >
        <p>
          Subpane 2 content
        </p>
      </div>
    </div>
  </section>
  <section
    aria-expanded="false"
    class=""
  >
    <header>
      <button
        tabindex="0"
        type="button"
      >
        
        <!--v-if-->
        
        <span>
          Subpane 3
        </span>
        
        <div
          class="toggle"
        />
        
      </button>
    </header>
    <div
      class="pane"
      role="region"
    >
      <div
        title="Subpane 3"
      >
        <p>
          Subpane 3 content
        </p>
      </div>
    </div>
  </section>
  
</div>
`;
